remove unused cells

--- a/cable_Transmission_Line_modelling/cable_modelling.ipynb
+++ b/cable_Transmission_Line_modelling/cable_modelling.ipynb
@@ -12,6 +12,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Cable transmission line modelling\n",
+        "================\n",
+        "\n",
+        "The cable in electrical systems are imposing more challenges to the EMC design as the switching devices running at faster speed. It's even more so in power electronics systems.\n",
+        "\n",
+        "Here it proposes an easy method to model the cable transimission line by extracting the lumped sum parameters from performing an easy open circuit (OC) and short circuit (SC) impedance scan using LCR meter."
+      ],
+      "metadata": {
+        "id": "XxVejVn1ywbf"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -141,7 +155,7 @@
           "start_time": "2023-06-30T15:35:07.745419Z"
         },
         "id": "-elQCXmaORAi",
-        "outputId": "36f77185-f4da-47f3-d3a8-4328aaa741f7"
+        "outputId": "4b39be36-d8fd-415a-ecc3-9daa124a3413"
       },
       "outputs": [
         {
@@ -192,7 +206,7 @@
           "start_time": "2023-06-30T15:35:09.011736Z"
         },
         "id": "qZ_LUvSzORAj",
-        "outputId": "ce85ea55-c899-443f-cd42-45c2359ac014"
+        "outputId": "63b90265-8e75-4314-9b7f-d4a34a6de954"
       },
       "outputs": [
         {
@@ -254,7 +268,7 @@
           "start_time": "2023-06-30T15:35:09.928942Z"
         },
         "id": "XQclVdczORAl",
-        "outputId": "5790f1c7-16a8-4e66-cfe4-f2245a1088b4"
+        "outputId": "2232e151-769e-42c1-fbbe-8f988e6ed398"
       },
       "outputs": [
         {
@@ -293,7 +307,7 @@
           "start_time": "2023-06-30T15:35:09.942285Z"
         },
         "id": "1Dpy19-hORAm",
-        "outputId": "44ca5029-eede-46a9-8419-a386fe2ffc39"
+        "outputId": "8c018fff-ed76-4d51-9d60-7f08d02a0aa2"
       },
       "outputs": [
         {
@@ -336,7 +350,7 @@
           "start_time": "2023-06-30T15:35:09.960695Z"
         },
         "id": "ew3LJeKlORAn",
-        "outputId": "b8227d23-4f33-4f4b-ba16-91a974f343fe"
+        "outputId": "5f43f89e-6fa7-4f9a-86f9-2afd17368f25"
       },
       "outputs": [
         {
@@ -390,7 +404,7 @@
           "start_time": "2023-06-30T15:35:09.980645Z"
         },
         "id": "YsvH94WSORAo",
-        "outputId": "faba959c-b0fa-445a-9699-3120d2c60f26"
+        "outputId": "07c92aac-0c38-4943-be8d-4cd786cbecaf"
       },
       "outputs": [
         {
@@ -447,7 +461,7 @@
           "start_time": "2023-06-30T15:35:09.999685Z"
         },
         "id": "1Gomp0MHORAp",
-        "outputId": "05a811ef-8a23-42a0-a76d-19649d7555bd"
+        "outputId": "2baf689e-606d-45d2-dd67-f63e981368d6"
       },
       "outputs": [
         {
@@ -484,7 +498,7 @@
           "start_time": "2023-06-30T15:35:10.009343Z"
         },
         "id": "Y8AJqzrKORAq",
-        "outputId": "30121e34-3f95-4e6a-cbee-f615ae91d1a6"
+        "outputId": "628b6e48-d654-42d1-8815-64fd7f8f1a69"
       },
       "outputs": [
         {
@@ -524,7 +538,7 @@
           "start_time": "2023-06-30T15:35:10.020441Z"
         },
         "id": "6euTvG_xORAr",
-        "outputId": "fe703cf2-0169-49b9-c4fd-b09b745de695"
+        "outputId": "17199649-2f67-4479-b6a4-aa408c1d9edf"
       },
       "outputs": [
         {
@@ -604,7 +618,7 @@
           "start_time": "2023-06-30T15:35:11.100482Z"
         },
         "id": "yZOp4OL6ORAs",
-        "outputId": "464fe16d-b197-47bf-811f-072e273ebaa5"
+        "outputId": "e84701d7-6607-477b-b355-333fb78b47fe"
       },
       "outputs": [
         {
@@ -644,7 +658,7 @@
           "start_time": "2023-06-30T15:35:11.117961Z"
         },
         "id": "RInkB_x7ORAs",
-        "outputId": "0c7f6d62-c161-4022-9e38-9fbaa4d7e686"
+        "outputId": "51e99552-802d-4345-d1fe-11762693d1a6"
       },
       "outputs": [
         {
@@ -672,7 +686,7 @@
           "start_time": "2023-06-30T15:35:11.129928Z"
         },
         "id": "4NxUxHlOORAt",
-        "outputId": "a038a80b-b844-4292-a5b1-575e9bbf7baf"
+        "outputId": "94b08f20-4c62-47fe-a6b1-3addf0472eec"
       },
       "outputs": [
         {
@@ -743,7 +757,7 @@
           "start_time": "2023-06-30T15:35:11.150435Z"
         },
         "id": "YT8x12IpORAt",
-        "outputId": "16c46864-8c6b-4c68-cf5d-1324738d0758"
+        "outputId": "654741f5-6faf-4211-8e76-c6a9a3905dd6"
       },
       "outputs": [
         {
@@ -813,7 +827,7 @@
         },
         "id": "zgiyynCjORAu",
         "scrolled": false,
-        "outputId": "23b4fec5-eafc-401a-93fd-93bf1d06b47c"
+        "outputId": "e75abe09-dad7-4e4f-cb80-689305809404"
       },
       "outputs": [
         {
@@ -873,7 +887,7 @@
           "start_time": "2023-06-30T15:35:11.674139Z"
         },
         "id": "TSOnb-5YORAu",
-        "outputId": "7dea688b-af9d-4e0a-a523-41b16ad4c9fc"
+        "outputId": "cace78ff-30e2-4391-8214-75778897b2e2"
       },
       "outputs": [
         {
